# TractViewer

./: .gitignore  README.md  TractViewer.py  pyproject.toml  test.py
tests/: test_import.py
tractviewer/: __init__.py  cli.py  core.py  enveloppe.py
tractviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
